feat: added images and item description

--- a/index.html
+++ b/index.html
@@ -19,22 +19,38 @@
     <div class="items">
         <section class="items__cakes">
             <section class="items__cake-1">
-                <p>cake</p>
+                <img src="assets/cakes/cake1.jpg">
+                <div class="item__description">
+                    <p>Cake item</p>
+                    <p class="item__price">20$</p>
+                </div>
             </section>
         </section>
         <section class="items__cupcakes">
             <section class="items__cupcake-1">
-                <p>cupcake</p>
+                <img src="assets/cupcakes/cupcake1.jpg">
+                <div class="item__description">
+                    <p>Cupcake item</p>
+                    <p class="item__price">20$</p>
+                </div>
             </section>
         </section>
         <section class="items__sweets">
             <section class="items__candy-1">
-                <p>candy</p>
+                <img src="assets/sweets/candy1.jpg">
+                <div class="item__description">
+                    <p>Candy item</p>
+                    <p class="item__price">20$</p>
+                </div>
             </section>
         </section>
         <section class="items__donuts">
             <section class="items__donut-1">
-                <p>donut</p>
+                <img src="assets/donuts/donut1.jpg">
+                <div class="item__description">
+                    <p>Donut item</p>
+                    <p class="item__price">20$</p>
+                </div>
             </section>
         </section>
     </div>
