--- a/index.html
+++ b/index.html
@@ -12,14 +12,29 @@
     <h1>confectionery shop</h1>
     <div class="filter">
         <button class="filter__all">All</button>
+        <button class="filter__cakes">Cakes</button>
         <button class="filter__cupcakes">Cupcakes</button>
         <button class="filter__sweets">Sweets</button>
         <button class="filter__donuts">Donuts</button>
     </div>
     <div class="items">
         <section class="items__cakes">
-            <section class="items__cake-1">
+            <section class="items__cake">
                 <img src="assets/cakes/cake1.jpg">
+                <div class="item__description">
+                    <p>Cake item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__cake">
+                <img src="assets/cakes/cake2.jpg">
+                <div class="item__description">
+                    <p>Cake item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__cake">
+                <img src="assets/cakes/cake3.jpg">
                 <div class="item__description">
                     <p>Cake item</p>
                     <p class="item__price">20$</p>
@@ -27,8 +42,22 @@
             </section>
         </section>
         <section class="items__cupcakes">
-            <section class="items__cupcake-1">
+            <section class="items__cupcake">
                 <img src="assets/cupcakes/cupcake1.jpg">
+                <div class="item__description">
+                    <p>Cupcake item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__cupcake">
+                <img src="assets/cupcakes/cupcake2.jpg">
+                <div class="item__description">
+                    <p>Cupcake item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__cupcake">
+                <img src="assets/cupcakes/cupcake3.jpg">
                 <div class="item__description">
                     <p>Cupcake item</p>
                     <p class="item__price">20$</p>
@@ -36,8 +65,22 @@
             </section>
         </section>
         <section class="items__sweets">
-            <section class="items__candy-1">
+            <section class="items__candy">
                 <img src="assets/sweets/candy1.jpg">
+                <div class="item__description">
+                    <p>Candy item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__candy">
+                <img src="assets/sweets/candy2.jpg">
+                <div class="item__description">
+                    <p>Candy item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__candy">
+                <img src="assets/sweets/candy3.jpg">
                 <div class="item__description">
                     <p>Candy item</p>
                     <p class="item__price">20$</p>
@@ -45,8 +88,22 @@
             </section>
         </section>
         <section class="items__donuts">
-            <section class="items__donut-1">
+            <section class="items__donut">
                 <img src="assets/donuts/donut1.jpg">
+                <div class="item__description">
+                    <p>Donut item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__donut">
+                <img src="assets/donuts/donut2.jpg">
+                <div class="item__description">
+                    <p>Donut item</p>
+                    <p class="item__price">20$</p>
+                </div>
+            </section>
+            <section class="items__donut">
+                <img src="assets/donuts/donut3.jpg">
                 <div class="item__description">
                     <p>Donut item</p>
                     <p class="item__price">20$</p>
